--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,10 @@
 layout: default
 ---
 <article class="post card" itemscope itemtype="http://schema.org/BlogPosting">
-  
+  <div class="top card">
+    <a class="email" href="tel:{{site.email}}">{{site.email}}</a>
+    <div>
  <div class="card-content">
-     <a class="email" href="tel:{{site.email}}">{{site.email}}</a>
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
