--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post card" itemscope itemtype="http://schema.org/BlogPosting">
   <div class="top card">
     <a class="email" href="tel:{{site.email}}">{{site.email}}</a>
-    <div>
+    </div>
  <div class="card-content">
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
